etc/zr: Group packages in [aur] together thematically

--- a/etc/zr/mappings.ini
+++ b/etc/zr/mappings.ini
@@ -22,19 +22,13 @@ zuepfe-keyring
 [aur]
 brother-mfc-j5620dw
 cfssl
-crictl
 epfl-menu-git
-epfl-scripts-git
-ikiwiki
 jmtpfs
 mitogen
 myrepos
 neroaac*-bin
 ntfs-3g-system-compression
 numix-gtk-theme-git
-perl-html-treebuilder-xpath
-perl-rpc-xml
-perl-xml-xpathengine
 pipepanic
 screen-message
 vault-client
@@ -52,7 +46,7 @@ python-msrestazure
 python-scp
 python-vsts-cd-manager
 
-# Effing Package Manager:
+# Effing Package Manager
 fpm
 ruby-arr-pm
 ruby-backports
@@ -66,6 +60,18 @@ ruby-json-1
 ruby-pleaserun
 ruby-stud
 ruby-xz
+
+# epfl-scripts
+epfl-scripts-git
+perl-html-treebuilder-xpath
+perl-xml-xpathengine
+
+# ikiwiki
+ikiwiki
+perl-rpc-xml
+
+# Kubernetes
+crictl
 
 [repkg]
 acpid
