etc/irssi: Listen to (alter nick/ego?) slimefoot
Really, I'd rather have irssi just highlight me right away based on my
current nickname. This is silly.

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -225,7 +225,7 @@ settings = {
 logs = { };
 hilights = (
   {
-    text = "(ayekat|karui|1771005|remakepkg|(make)?metapkg|epfl-(scripts|menu))";
+    text = "(ayekat|slimefoot|karui|1771005|remakepkg|(make)?metapkg|epfl-(scripts|menu))";
     nick = "yes";
     word = "yes";
     regexp = "yes";
