etc/irssi: Ignore joins/quits in #uyuni

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -38,6 +38,7 @@ ignores = (
       "#saltstack",
       "#systemd",
       "#ubuntu",
+      "#uyuni",
       "#vim",
       "##windows",
       "#xorg",
