etc/irssi: Ignore join/quit events in #mutt

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -28,6 +28,7 @@ ignores = (
       "##linux",
       "#manjaro",
       "##mtg",
+      "#mutt",
       "#netfilter",
       "#pass",
       "#python",
