etc/irssi: Join #centos

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -19,6 +19,7 @@ ignores = (
       "#archlinux-aur",
       "#archlinux-offtopic",
       "#archlinux-security",
+      "#centos",
       "#claws",
       "#debian",
       "#freenode",
