etc/irssi: Join #suse (openSUSE)
Not sure why they use this naming. #opensuse redirects users to #suse.

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -39,6 +39,7 @@ ignores = (
       "#qutebrowser-offtopic",
       "#raspbian",
       "#saltstack",
+      "#suse",
       "#systemd",
       "#ubuntu",
       "#uyuni",
