--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -230,7 +230,7 @@ settings = {
 logs = { };
 hilights = (
   {
-    text = "(ayekat|slimefoot|karui|1771005|remakepkg|(make)?metapkg|epfl-(scripts|menu))";
+    text = "(ayekat|slimefoot|karui|adfinis|1771005|remakepkg|(make)?metapkg|epfl-(scripts|menu))";
     nick = "yes";
     word = "yes";
     regexp = "yes";
