etc/irssi: Join #fosdem

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -23,6 +23,7 @@ ignores = (
       "#centos",
       "#claws",
       "#debian",
+      "#fosdem",
       "#freenode",
       "#gitlab",
       "#gnome",
