etc/zr: Adapt ca-certificates-adsy mapping for new packaging structure
There will be more than one cert package now.

--- a/etc/zr/mappings.ini
+++ b/etc/zr/mappings.ini
@@ -104,7 +104,7 @@ xorg-xinit
 [adsy]
 adsy-?*
 bundle-wifi-gurke
-ca-certificates-adsy
+ca-certificates-adsy-?*
 ca-certificates-gurke
 system-gurke
 
