etc/irssi: Join #irssi

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -28,6 +28,7 @@ ignores = (
       "#gitlab",
       "#gnome",
       "#gnugeneration",
+      "#irssi",
       "##linux",
       "#manjaro",
       "##mtg",
