etc/irssi: Stick #archlinux-aur to window 5
Let's make things official now. I've been in there for more than half a
year.

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -270,5 +270,15 @@ windows = {
       }
     );
   };
+  5 = {
+    items = (
+      {
+        type = "CHANNEL";
+        chat_type = "IRC";
+        name = "#archlinux-aur";
+        tag = "znc";
+      }
+    );
+  };
 };
 mainwindows = { 1 = { first_line = "1"; lines = "32"; }; };
