etc/git: Create work-specific configuration for name and email
Having my private email attached to company stuff isn't great either.
But I'm not going to globally use my company email address.

Given that I don't want the company email address out there, the config
snippet is in the private localdir config.

ayekat's back, bitches!

--- a/etc/git/config
+++ b/etc/git/config
@@ -1,6 +1,10 @@
 [user]
-	name = Tinu Weber
+	name = ayekat
 	email = takeya@bluewin.ch
+[includeIf "gitdir:~/adsy/"]
+	path = ~/.local/etc/git/private/adsy.config
+[includeIf "gitdir:~/work/adsy/"]
+	path = ~/.local/etc/git/private/adsy.config
 [color]
 	status = auto
 	diff = auto
