etc/irssi: SaltStack is on #salt

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -40,7 +40,7 @@ ignores = (
       "#qutebrowser",
       "#qutebrowser-offtopic",
       "#raspbian",
-      "#saltstack",
+      "#salt",
       "#suse",
       "#systemd",
       "#ubuntu",
