etc/zr: Adapt mappings for zuepfe reorg

--- a/etc/zr/mappings.ini
+++ b/etc/zr/mappings.ini
@@ -111,8 +111,14 @@ system-gurke
 
 [meta]
 bundle-?*
+ayekat.ch
 zuepfe-?*
-system-?*
+system-device-?*
+system-chassis-?*
+system-role-?*
+host-brombeeri
+host-chirschi
+host-heidubeeri
+host-kiwi
 epfl-?*
 devel-?*
-ayekat.ch
