etc/zr: Update metapkg list for [adsy] as well

--- a/etc/zr/mappings.ini
+++ b/etc/zr/mappings.ini
@@ -104,10 +104,9 @@ xorg-xinit
 
 [adsy]
 adsy-?*
-bundle-wifi-gurke
 ca-certificates-adsy
 ca-certificates-gurke
-system-gurke
+host-gurke
 
 [meta]
 bundle-?*
