etc/zr: Adapt for system-property-... metapackages

--- a/etc/zr/mappings.ini
+++ b/etc/zr/mappings.ini
@@ -115,6 +115,7 @@ zuepfe-?*
 system-device-?*
 system-chassis-?*
 system-role-?*
+system-property-?*
 host-brombeeri
 host-chirschi
 host-heidubeeri
