etc/lighttpd: Enable access.log on gurke

--- a/etc/lighttpd/lighttpd-gurke.conf
+++ b/etc/lighttpd/lighttpd-gurke.conf
@@ -2,10 +2,12 @@
 
 # Modules:
 include "conf.d/mimetype.conf"
+server.modules += ( "mod_accesslog" )
 
 # Basic server configuration:
 server.port = 8080
 server.errorlog = "/home/ayekat/.local/var/log/lighttpd/error.log"
+accesslog.filename = "/home/ayekat/.local/var/log/lighttpd/access.log"
 
 # Directories:
 index-file.names = ( "index.html" )
