etc/irssi: Ignore join/quit events in ##php

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -35,6 +35,7 @@ ignores = (
       "#mutt",
       "#netfilter",
       "#pass",
+      "##php",
       "#python",
       "#qemu",
       "#qutebrowser",
