--- a/etc/zr/mappings.ini
+++ b/etc/zr/mappings.ini
@@ -34,6 +34,7 @@ neroaac*-bin
 ntfs-3g-system-compression
 numix-gtk-theme-git
 pipepanic
+pgbadger
 postgresql-9.4
 screen-message
 ttf-sourcesanspro
