Switch to PulseAudio

--- a/etc/mpd/mpd.conf
+++ b/etc/mpd/mpd.conf
@@ -9,13 +9,6 @@ log_file             "~/.local/var/log/mpd.log"
 
 samplerate_converter "internal"    # see http://mpd.wikia.com/wiki/Tuning
 audio_output {
-    type             "alsa"
-    name             "My ALSA Device"
-##  device           "hw:0,0"      # optional
-##  format           "44100:16:2"  # optional
-    mixer_type       "hardware"    # optional
-##  mixer_device     "default"     # optional
-    mixer_control    "Master"      # optional
-#   auto_resample    "no"
-##  mixer_index      "0"           # optional
+    type            "pulse"
+    name            "pulse audio"
 }
