etc/zr: Rename adsy to adfinis

--- a/etc/zr/mappings.ini
+++ b/etc/zr/mappings.ini
@@ -108,9 +108,10 @@ vim-runtime
 xdg-utils
 xorg-xinit
 
-[adsy]
-adsy-?*
-ca-certificates-adsy
+[adfinis]
+adfinis-?*
+openvpn-client-config-adfinis-*
+ca-certificates-adfinis
 ca-certificates-gurke
 host-gurke
 
