--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -233,7 +233,7 @@ settings = {
 logs = { };
 hilights = (
   {
-    text = "(ayekat|slimefoot|karui|adfinis|1771005|remakepkg|(make)?metapkg|epfl-(scripts|menu))";
+    text = "(ayekat|slimefoot|karui|adfinis|1771005|remakepkg|(make)?metapkg|epfl-(scripts|menu))|xdg|XDG";
     nick = "yes";
     word = "yes";
     regexp = "yes";
