etc: Tweaks after using GNOME
First, there's a couple more applications dropping stuff into
$XDG_CONFIG_HOME, so I'm .gitignore'ing them.

Second, it turns out my custom keyboard layout is not installed
"properly" (in the sense that GNOME doesn't recognise it), so manually
setting it with setxkbcomp is currently also necessary for GNOME.

I still have to find out what additional files are required for having
the keyboard layout recognised by GNOME (it looks like some rules files
in /usr/share/X11/xkb/rules might be necessary).

--- a/etc/.gitignore
+++ b/etc/.gitignore
@@ -19,6 +19,15 @@
 /wesnoth/
 /wireshark/
 
+# GNOME:
+/dleyna-renderer-service.conf
+/dleyna-server-service.conf
+/evolution/
+/gnome-control-center/
+/gtk-3.0/bookmarks
+/pipewire-media-session/
+/totem/
+
 # MTG Arena:
 /lutris/
 /menus/
