--- a/etc/mpd/mpd.conf
+++ b/etc/mpd/mpd.conf
@@ -8,10 +8,10 @@ playlist_directory   "~/.local/var/lib/mpd/playlists"
 log_file             "~/.local/var/log/mpd.log"
 
 samplerate_converter "internal"    # see http://mpd.wikia.com/wiki/Tuning
-#audio_output {
-#    type      "pulse"
-#    name      "MPD to PulseAudio (UNIX)"
-#}
+audio_output {
+    type      "pulse"
+    name      "MPD to PulseAudio (UNIX)"
+}
 audio_output {
     type      "pulse"
     name      "MPD to PulseAudio (TCP)"
