etc/irssi: Don't match lowercase `xdg`
There's too much talk about xdg-utils and all the GNOME/KDE toolings
that also have `xdg` in their name.

I expect uppercase `XDG` to be generally more relevant, so I'm keeping
that around.

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -234,7 +234,7 @@ settings = {
 logs = { };
 hilights = (
   {
-    text = "(ayekat|slimefoot|karui|adfinis|1771005|remakepkg|(make)?metapkg|epfl-(scripts|menu))|xdg|XDG";
+    text = "(ayekat|slimefoot|karui|adfinis|1771005|remakepkg|(make)?metapkg|epfl-(scripts|menu))|XDG";
     nick = "yes";
     word = "yes";
     regexp = "yes";
