etc/irssi: Clean up aliases, remove XDG highlight, put back full name
* I don't use the majority of those aliases, so they're mostly just
  noise in the config.
* The highlight matching is case-insensitive, so `xdg` or `XDG` actually
  doesn't make any difference. I'm only interested in the latter, but
  until I find a way to only match the uppercase variant, I'd rather not
  have any notifications at all.
* People already know my full name from any online service where I have
  put my full name, so it's silly to hide it here.

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -58,53 +58,8 @@ ignores = (
 );
 
 aliases = {
-  J = "join";
-  WJOIN = "join -window";
-  WQUERY = "query -window";
-  LEAVE = "part";
-  BYE = "quit";
-  EXIT = "quit";
-  SIGNOFF = "quit";
-  DESCRIBE = "action";
-  DATE = "time";
-  HOST = "userhost";
-  LAST = "lastlog";
   SAY = "msg *";
-  WI = "whois";
-  WII = "whois $0 $0";
-  WW = "whowas";
-  W = "who";
-  N = "names";
-  M = "msg";
-  T = "topic";
-  C = "clear";
-  CL = "clear";
-  K = "kick";
-  KB = "kickban";
-  KN = "knockout";
-  BANS = "ban";
-  B = "ban";
-  MUB = "unban *";
-  UB = "unban";
-  IG = "ignore";
-  UNIG = "unignore";
-  SB = "scrollback";
-  UMODE = "mode $N";
   WC = "window close";
-  WN = "window new hide";
-  SV = "say Irssi $J ($V) - http://irssi.org/";
-  GOTO = "sb goto";
-  CHAT = "dcc chat";
-  RUN = "SCRIPT LOAD";
-  CALC = "exec - if command -v bc >/dev/null 2>&1\\; then printf '%s=' '$*'\\; echo '$*' | bc -l\\; else echo bc was not found\\; fi";
-  SBAR = "STATUSBAR";
-  INVITELIST = "mode $C +I";
-  Q = "QUERY";
-  "MANUAL-WINDOWS" = "set use_status_window off;set autocreate_windows off;set autocreate_query_level none;set autoclose_windows off;set reuse_unused_windows on;save";
-  EXEMPTLIST = "mode $C +e";
-  ATAG = "WINDOW SERVER";
-  UNSET = "set -clear";
-  RESET = "set -default";
 };
 
 statusbar = {
@@ -218,9 +173,10 @@ statusbar = {
     };
   };
 };
+
 settings = {
   core = {
-    real_name = "Tinu";
+    real_name = "Tinu Weber";
     user_name = "ayekat";
     nick = "ayekat";
   };
@@ -234,7 +190,7 @@ settings = {
 logs = { };
 hilights = (
   {
-    text = "(ayekat|slimefoot|karui|adfinis|1771005|remakepkg|(make)?metapkg|epfl-(scripts|menu))|XDG";
+    text = "(ayekat|slimefoot|karui|adfinis|1771005|remakepkg|(make)?metapkg|epfl-(scripts|menu))";
     nick = "yes";
     word = "yes";
     regexp = "yes";
