Set up kanboard on heidubeeri
Add PHP config, update lighttpd config.

--- a/etc/lighttpd/lighttpd-heidubeeri.conf
+++ b/etc/lighttpd/lighttpd-heidubeeri.conf
@@ -1,17 +1,20 @@
 # lighttpd configuration for user session
 
-# Modules:
-include "conf.d/mimetype.conf"
-
 # Basic server configuration:
 server.port = 8080
 server.errorlog = "/home/ayekat/.local/var/log/lighttpd/error.log"
+server.document-root = "/dev/null"
 
-# Directories:
-index-file.names = ( "index.html" )
-dir-listing.activate = "disable"
+# Modules:
+include "conf.d/mimetype.conf"
+include "conf.d/fastcgi.conf"
 
 # Virtual Hosts:
-#$HTTP["host"] = "^wiki(\..+)?$" {
-	server.document-root = "/home/ayekat/.local/srv/wiki/dst"   # default
-#}
+$HTTP["host"] =~ "^wiki(\..+)?$" {
+	index-file.names = ( "index.html" )
+	dir-listing.activate = "disable"
+	server.document-root = "/home/ayekat/.local/srv/wiki/dst"
+}
+$HTTP["host"] =~ "^kanban(\..+)?$" {
+	server.document-root = "/home/ayekat/.local/srv/kanban/kanboard"
+}
