Set up systemd-tmpfiles for lighttpd
Creates the log directory.

--- a/etc/systemd/user/lighttpd.service
+++ b/etc/systemd/user/lighttpd.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Lighttpd Web Server
-After=syslog.target network.target
+Requires=systemd-tmpfiles-setup.service
+After=systemd-tmpfiles-setup.service
 
 [Service]
 ExecStartPre=/usr/sbin/lighttpd -t -f %E/lighttpd/lighttpd-%H.conf
