etc/lighttpd: Use environment variables instead of hardcoding usernames
Also some more cleanup (remove unused sites, remove penrose config,
remove useless spacing).

--- a/etc/lighttpd/lighttpd-chirschi.conf
+++ b/etc/lighttpd/lighttpd-chirschi.conf
@@ -1,33 +1,24 @@
 # lighttpd configuration for user session
 
 # Modules:
-include "conf.d/mimetype.conf"
+include env.XDG_CONFIG_HOME + "/lighttpd/conf.d/mimetype.conf"
 $HTTP["host"] !~ "^(wiki|it|debian)(\..+)?$" {
-	include "conf.d/cgi.conf"         # .cgi => python3
-	include "conf.d/rewrite.conf"     # *.* => /cgi/main.cgi
+	include env.XDG_CONFIG_HOME + "/lighttpd/conf.d/cgi.conf"      # .cgi => python3
+	include env.XDG_CONFIG_HOME + "/lighttpd/conf.d/rewrite.conf"  # *.* => /cgi/main.cgi
 }
 
 # Basic server configuration:
 server.port = 8080
-server.errorlog = "/home/ayekat/.local/var/log/lighttpd/error.log"
+server.errorlog = env.XDG_LOG_HOME + "/lighttpd/error.log"
 
 # Directories:
-index-file.names = ( "index.html" )
+index-file.names = ("index.html")
 dir-listing.activate = "enable"
 
 # Virtual Hosts:
 #$HTTP["host"] = "^ayekat.ch$" {
-	server.document-root = "/home/ayekat/.local/srv/http/ayekat.ch"   # default
+	server.document-root = env.HOME + "/.local/srv/http/ayekat.ch"   # default
 #}
-$HTTP["host"] =~ "^temperature(\..+)?$" {
-	server.document-root = "/home/ayekat/.local/srv/http/temperature.papiliorama.local"
-}
-$HTTP["host"] =~ "^it(\..+)?$" {
-	server.document-root = "/home/ayekat/.local/srv/http/it.papiliorama.local/www"
-}
 $HTTP["host"] =~ "^wiki(\..+)?$" {
-	server.document-root = "/home/ayekat/.local/srv/wiki/dst"
-}
-$HTTP["host"] =~ "^debian(\..+)?$" {
-	server.document-root = "/home/ayekat/.local/srv/http/debian.chirschi.net"
+	server.document-root = env.HOME + "/.local/srv/wiki/dst"
 }
