--- a/etc/lighttpd/lighttpd-gurke.conf
+++ b/etc/lighttpd/lighttpd-gurke.conf
@@ -1,19 +1,19 @@
 # lighttpd configuration for user session
 
 # Modules:
-include "conf.d/mimetype.conf"
-server.modules += ( "mod_accesslog" )
+include env.XDG_CONFIG_HOME + "/lighttpd/conf.d/mimetype.conf"
+server.modules += ("mod_accesslog")
 
 # Basic server configuration:
 server.port = 8080
-server.errorlog = "/home/ayekat/.local/var/log/lighttpd/error.log"
-accesslog.filename = "/home/ayekat/.local/var/log/lighttpd/access.log"
+server.errorlog = env.XDG_LOG_HOME + "/lighttpd/error.log"
+accesslog.filename = env.XDG_LOG_HOME + "/lighttpd/access.log"
 
 # Directories:
-index-file.names = ( "index.html" )
+index-file.names = ("index.html")
 dir-listing.activate = "enable"
 
 # Virtual Hosts:
 #$HTTP["host"] = "^pxe(\..+)?$" {
-	server.document-root = "/home/ayekat/.local/srv/http/pxe.gurke.net" # default
+	server.document-root = env.HOME + "/.local/srv/http/pxe.gurke.net" # default
 #}
