--- a/etc/lighttpd/lighttpd-heidubeeri.conf
+++ b/etc/lighttpd/lighttpd-heidubeeri.conf
@@ -2,19 +2,19 @@
 
 # Basic server configuration:
 server.port = 8080
-server.errorlog = "/home/ayekat/.local/var/log/lighttpd/error.log"
+server.errorlog = env.XDG_LOG_HOME + "/lighttpd/error.log"
 server.document-root = "/dev/null"
 
 # Modules:
-include "conf.d/mimetype.conf"
-include "conf.d/fastcgi.conf"
+include env.XDG_CONFIG_HOME + "/lighttpd/conf.d/mimetype.conf"
+include env.XDG_CONFIG_HOME + "/lighttpd/conf.d/fastcgi.conf"
 
 # Virtual Hosts:
 $HTTP["host"] =~ "^wiki(\..+)?$" {
-	index-file.names = ( "index.html" )
+	index-file.names = ("index.html")
 	dir-listing.activate = "disable"
-	server.document-root = "/home/ayekat/.local/srv/wiki/dst"
+	server.document-root = env.HOME + "/.local/srv/wiki/dst"
 }
 $HTTP["host"] =~ "^kanban(\..+)?$" {
-	server.document-root = "/home/ayekat/.local/srv/kanban/kanboard"
+	server.document-root = env.HOME + "/.local/srv/kanban/kanboard"
 }
