--- a/etc/lighttpd/lighttpd-brombeeri.conf
+++ b/etc/lighttpd/lighttpd-brombeeri.conf
@@ -1,21 +1,21 @@
 # lighttpd configuration for user session
 
 # Modules:
-include "conf.d/mimetype.conf"
+include env.XDG_CONFIG_HOME + "/lighttpd/conf.d/mimetype.conf"
 #$HTTP["host"] !~ "^paste(\..*)$" {
-	include "conf.d/cgi.conf"         # .cgi => python3
-	include "conf.d/rewrite.conf"     # *.* => /cgi/main.cgi
+	include env.XDG_CONFIG_HOME + "/lighttpd/conf.d/cgi.conf"         # .cgi => python3
+	include env.XDG_CONFIG_HOME + "/lighttpd/conf.d/rewrite.conf"     # *.* => /cgi/main.cgi
 #}
 
 # Basic server configuration:
 server.port = 8080
-server.errorlog = "/home/ayekat/.local/var/log/lighttpd/error.log"
+server.errorlog = env.XDG_LOG_HOME + "/lighttpd/error.log"
 
 # Directories:
-index-file.names = ( "index.html" )
+index-file.names = ("index.html")
 dir-listing.activate = "disable"
 
 # Virtual Hosts:
 #$HTTP["host"] =~ "^ayekat.ch$" {
-	server.document-root = "/home/ayekat/.local/srv/http/ayekat.ch"   # default
+	server.document-root = env.HOME + "/.local/srv/http/ayekat.ch"   # default
 #}
