--- a/etc/gtk-3.0/settings.ini
+++ b/etc/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
-[Settings] 
-gtk-theme-name=Numix
+[Settings]
+gtk-theme-name=Adwaita
 gtk-icon-theme-name=Adwaita
-gtk-font-name=Sans 8
+gtk-font-name=Cantarell 9
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
@@ -12,6 +12,6 @@ gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
 gtk-xft-hinting=1
-gtk-xft-hintstyle=hintfull
+gtk-xft-hintstyle=hintnone
 gtk-xft-rgba=rgb
 gtk-color-scheme=selected_bg_color:#d64937\ntoolbar_fg_color:#555555\ntooltip_fg_color:#dedede\nlink_color:#fc6f5d\npanel_fg_color:#dcdcdc\nbase_color:#333333333333\nselected_fg_color:#f9f9f9\ntext_color:#eeeeeeeeeeee\ntitlebar_bg_color:#2d2d2d\nmenubar_bg_color:#2d2d2d\nbg_color:#222222222222\ntoolbar_bg_color:#dedede\ntooltip_bg_color:#2d2d2d\nmenu_bg_color:#2d2d2d\ntitlebar_fg_color:#dcdcdc\nmenubar_fg_color:#dcdcdc\npanel_bg_color:#2d2d2d\nmenu_fg_color:#dcdcdc\nfg_color:#bbbbbbbbbbbb\n
