php-fpm: Set prefix to allow relative inclusion of config snippets
Aaaaaand another instance of hardcoded absolute paths is gone! \o,

--- a/etc/systemd/user/php-fpm.service
+++ b/etc/systemd/user/php-fpm.service
@@ -6,7 +6,7 @@ After=systemd-tmpfiles-setup.service
 [Service]
 Type=notify
 PIDFile=%t/php-fpm/php-fpm.pid
-ExecStart=/usr/bin/php-fpm --nodaemonize --php-ini %E/php/php.ini --fpm-config %E/php/php-fpm.conf
+ExecStart=/usr/bin/php-fpm --nodaemonize --prefix %h/.local --php-ini %E/php/php.ini --fpm-config %E/php/php-fpm.conf
 ExecReload=/bin/kill -USR2 $MAINPID
 
 [Install]
