--- a/etc/php/php-fpm.conf
+++ b/etc/php/php-fpm.conf
@@ -140,4 +140,4 @@ error_log = syslog
 ; Relative path can also be used. They will be prefixed by:
 ;  - the global prefix if it's been set (-p argument)
 ;  - /usr otherwise
-include=/home/ayekat/.local/etc/php/php-fpm.d/*.conf
+include=etc/php/php-fpm.d/*.conf
