etc/lighttpd/conf.d/fastcgi.conf: Remove hardcoded XDG_RUNTIME_DIR

--- a/etc/lighttpd/conf.d/fastcgi.conf
+++ b/etc/lighttpd/conf.d/fastcgi.conf
@@ -5,7 +5,7 @@ index-file.names += ("index.php")
 fastcgi.server = (
 	".php" => (
 		"localhost" => (
-			"socket" => "/run/user/60000/php-fpm/php-fpm.sock",
+			"socket" => env.XDG_RUNTIME_DIR + "/php-fpm/php-fpm.sock",
 			"broken-scriptfilename" => "enable",
 		)
 	)
