etc/lighttpd: Major overhaul
* Move site-specific configuration into a sites.d subdirectory. This
  reduces redundancy for sites that are configured on multiple hosts
  (e.g. chirschi runs the zuepfe Wiki and ayekat.ch for testing
  purposes). Also, the sites are fairly agnostic to where they are
  placed and under which name they are accessed.

* Remove cgi.conf (its content was site-specific anyway, so that part is
  now in ayekat.ch.conf, currently the only site where it's used).

* Create a baseline configuration file in conf.d that must be included
  by each host-specific configuration, also for less redundancy.

* Remove mimetypes.conf (its content is now part of the baseline
  config).

* Use mod_simple_vhost for virtual hosting (this also solves the
  declaration of server.[…] variables inside conditions).

Apart from that, some syntax improvements in global.conf and other
files.

--- a/etc/lighttpd/lighttpd-brombeeri.conf
+++ b/etc/lighttpd/lighttpd-brombeeri.conf
@@ -1,21 +1,9 @@
-# lighttpd configuration for user session
+# lighttpd configuration for brombeeri
 
-# Modules:
-include env.XDG_CONFIG_HOME + "/lighttpd/conf.d/mimetype.conf"
-#$HTTP["host"] !~ "^paste(\..*)$" {
-	include env.XDG_CONFIG_HOME + "/lighttpd/conf.d/cgi.conf"         # .cgi => python3
-	include env.XDG_CONFIG_HOME + "/lighttpd/conf.d/rewrite.conf"     # *.* => /cgi/main.cgi
-#}
+include env.XDG_CONFIG_HOME + "/lighttpd/conf.d/base.conf"
+server.modules += ("mod_cgi", "mod_rewrite")
 
-# Basic server configuration:
-server.port = 8080
-server.errorlog = env.XDG_LOG_HOME + "/lighttpd/error.log"
-
-# Directories:
-index-file.names = ("index.html")
-dir-listing.activate = "disable"
-
-# Virtual Hosts:
-#$HTTP["host"] =~ "^ayekat.ch$" {
-	server.document-root = env.HOME + "/.local/srv/http/ayekat.ch"   # default
-#}
+$HTTP["host"] =~ "^ayekat.ch$" {
+	simple-vhost.default-host = "ayekat.ch"
+	include env.XDG_CONFIG_HOME + "/lighttpd/sites.d/ayekat.ch.conf"
+}
