--- a/etc/lighttpd/lighttpd-chirschi.conf
+++ b/etc/lighttpd/lighttpd-chirschi.conf
@@ -1,24 +1,13 @@
-# lighttpd configuration for user session
+# lighttpd configuration for chirschi
 
-# Modules:
-include env.XDG_CONFIG_HOME + "/lighttpd/conf.d/mimetype.conf"
-$HTTP["host"] !~ "^(wiki|it|debian)(\..+)?$" {
-	include env.XDG_CONFIG_HOME + "/lighttpd/conf.d/cgi.conf"      # .cgi => python3
-	include env.XDG_CONFIG_HOME + "/lighttpd/conf.d/rewrite.conf"  # *.* => /cgi/main.cgi
+include env.XDG_CONFIG_HOME + "/lighttpd/conf.d/base.conf"
+server.modules += ("mod_cgi", "mod_rewrite")
+
+$HTTP["host"] !~ "^wiki(\..+)?$" { # default
+	simple-vhost.default-host = "ayekat.ch"
+	include env.XDG_CONFIG_HOME + "/lighttpd/sites.d/ayekat.ch.conf"
 }
-
-# Basic server configuration:
-server.port = 8080
-server.errorlog = env.XDG_LOG_HOME + "/lighttpd/error.log"
-
-# Directories:
-index-file.names = ("index.html")
-dir-listing.activate = "enable"
-
-# Virtual Hosts:
-#$HTTP["host"] = "^ayekat.ch$" {
-	server.document-root = env.HOME + "/.local/srv/http/ayekat.ch"   # default
-#}
 $HTTP["host"] =~ "^wiki(\..+)?$" {
-	server.document-root = env.HOME + "/.local/srv/wiki/dst"
+	simple-vhost.default-host = "wiki"
+	include env.XDG_CONFIG_HOME + "/lighttpd/sites.d/wiki.conf"
 }
