--- a/etc/lighttpd/lighttpd-gurke.conf
+++ b/etc/lighttpd/lighttpd-gurke.conf
@@ -1,19 +1,9 @@
-# lighttpd configuration for user session
+# lighttpd configuration for gurke
 
-# Modules:
-include env.XDG_CONFIG_HOME + "/lighttpd/conf.d/mimetype.conf"
-server.modules += ("mod_accesslog")
+include env.XDG_CONFIG_HOME + "/lighttpd/conf.d/base.conf"
+server.modules += ("mod_dirlisting")
 
-# Basic server configuration:
-server.port = 8080
-server.errorlog = env.XDG_LOG_HOME + "/lighttpd/error.log"
-accesslog.filename = env.XDG_LOG_HOME + "/lighttpd/access.log"
-
-# Directories:
-index-file.names = ("index.html")
-dir-listing.activate = "enable"
-
-# Virtual Hosts:
-#$HTTP["host"] = "^pxe(\..+)?$" {
-	server.document-root = env.HOME + "/.local/srv/http/pxe.gurke.net" # default
+#$HTTP["host"] = "^pxe(\..+)?$" { # default
+	simple-vhost.default-host = "pxe"
+	include env.XDG_CONFIG_HOME + "/lighttpd/sites.d/files.conf"
 #}
