--- a/etc/lighttpd/lighttpd-heidubeeri.conf
+++ b/etc/lighttpd/lighttpd-heidubeeri.conf
@@ -1,20 +1,13 @@
-# lighttpd configuration for user session
+# lighttpd configuration for heidubeeri
 
-# Basic server configuration:
-server.port = 8080
-server.errorlog = env.XDG_LOG_HOME + "/lighttpd/error.log"
-server.document-root = "/dev/null"
+include env.XDG_CONFIG_HOME + "/lighttpd/conf.d/base.conf"
+server.modules += ("mod_fastcgi")
 
-# Modules:
-include env.XDG_CONFIG_HOME + "/lighttpd/conf.d/mimetype.conf"
-include env.XDG_CONFIG_HOME + "/lighttpd/conf.d/fastcgi.conf"
-
-# Virtual Hosts:
 $HTTP["host"] =~ "^wiki(\..+)?$" {
-	index-file.names = ("index.html")
-	dir-listing.activate = "disable"
-	server.document-root = env.HOME + "/.local/srv/wiki/dst"
+	simple-vhost.default-host = "wiki"
+	include env.XDG_CONFIG_HOME + "/lighttpd/sites.d/wiki.conf"
 }
 $HTTP["host"] =~ "^kanban(\..+)?$" {
-	server.document-root = env.HOME + "/.local/srv/kanban/kanboard"
+	simple-vhost.default-host = "kanban"
+	include env.XDG_CONFIG_HOME + "/lighttpd/sites.d/kanboard.conf"
 }
