etc/zr: Add task-research-* to [aur]
Also adapt for new naming scheme for the cleanup tasks.

--- a/etc/zr/mappings.ini
+++ b/etc/zr/mappings.ini
@@ -123,7 +123,8 @@ host-gurke
 bundle-?*
 ayekat.ch
 zuepfe-?*
-task-storage-cleanup*
+task-cleanup-*
+task-research-*
 system-device-?*
 system-chassis-?*
 system-role-?*
