etc/zr: Add python-pykickstart and python-urlgrabber
The first to [original], since we deviated from the AUR version.

--- a/etc/zr/mappings.ini
+++ b/etc/zr/mappings.ini
@@ -15,6 +15,7 @@ pacman-hacks
 pacman-hacks-build
 pastebins-git
 pooch-git
+python-pykickstart
 spindown-heidubeeri
 system-config-*
 totp-git
@@ -41,6 +42,7 @@ ntfs-3g-system-compression
 pipepanic
 pgbadger
 postgresql-9.4
+python-urlgrabber
 screen-message
 ttf-sourcesanspro
 vault-client
