etc/zr: Add pacman mirror and repo packages to [original]

--- a/etc/zr/mappings.ini
+++ b/etc/zr/mappings.ini
@@ -13,6 +13,8 @@ norin-client-git
 open-git
 pacman-hacks
 pacman-hacks-build
+pacman-mirror-*
+pacman-repo-*
 pastebins-git
 pooch-git
 python-pykickstart
