etc/git: Sign commits
Starting to package stuff, but also this dotfiles repo is actually a
huuuuuuge security risk.

May follow this up with a clean-room implementation of my basic packages
and configs... one day :-P

--- a/etc/git/config
+++ b/etc/git/config
@@ -1,6 +1,7 @@
 [user]
 	name = ayekat
 	email = takeya@bluewin.ch
+	signingkey = FE8CF63AD2306FD41A5500E6DCD45EAF921A7822
 [includeIf "gitdir:~/adfinis/"]
 	path = ~/.local/etc/git/private/adfinis.config
 [color]
