--- a/etc/git/config
+++ b/etc/git/config
@@ -2,7 +2,7 @@
 	name = ayekat
 	email = takeya@bluewin.ch
 	signingkey = FE8CF63AD2306FD41A5500E6DCD45EAF921A7822
-[includeIf "gitdir:~/adfinis/"]
+[includeIf "gitdir:/home/martinwe/"]
 	path = ~/.local/etc/git/private/adfinis.config
 [color]
 	status = auto
