Add gstreamer0.10 and HDX RealTime Media Engine to [aur]
Required for making Skye4Business work in Citrix Receiver (though for
some reason this doesn't work everywhere...)

--- a/etc/zr/mappings.ini
+++ b/etc/zr/mappings.ini
@@ -31,7 +31,6 @@ aptly
 cfssl
 epfl-menu-git
 exoscale-cli
-icaclient
 jmeter
 jmtpfs
 mitogen
@@ -46,6 +45,11 @@ python-urlgrabber
 screen-message
 ttf-sourcesanspro
 zoom
+
+# Citrix Receiver
+gstreamer0.10*
+hdx-realtime-media-engine
+icaclient
 
 # Effing Package Manager
 fpm
