etc/lighttpd: Serve srv/http directly

--- a/etc/lighttpd/lighttpd-gurke.conf
+++ b/etc/lighttpd/lighttpd-gurke.conf
@@ -4,6 +4,6 @@ include env.XDG_CONFIG_HOME + "/lighttpd/conf.d/base.conf"
 server.modules += ("mod_dirlisting")
 
 #$HTTP["host"] = "^pxe(\..+)?$" { # default
-	simple-vhost.default-host = "pxe"
+	simple-vhost.default-host = ""
 	include env.XDG_CONFIG_HOME + "/lighttpd/sites.d/files.conf"
 #}
