etc/zr: Add postgresql-{docs,libs} to [aur] as well

--- a/etc/zr/mappings.ini
+++ b/etc/zr/mappings.ini
@@ -40,6 +40,8 @@ ntfs-3g-system-compression
 pipepanic
 pgbadger
 postgresql-9.4
+postgresql-docs-9.4
+postgresql-libs-9.4
 python-urlgrabber
 screen-message
 ttf-sourcesanspro
