etc/fontconfig: Create alias to Libertinus for Libertine
Apparently Libertinus is the successor font now, as Libertine is no
longer maintained.

--- a/etc/fontconfig/fonts.conf
+++ b/etc/fontconfig/fonts.conf
@@ -33,7 +33,10 @@ Written by ayekat on a rainy day in september 2012.
 	<alias>
 		<family>Helvetica</family>
 		<prefer><family>Free Sans</family></prefer>
-		<default><family>fixed</family></default>
+	</alias>
+	<alias>
+		<family>Linux Libertine</family>
+		<prefer><family>Libertinus Serif</family></prefer>
 	</alias>
 </fontconfig>
 
