etc/zr: Update dependencies for fpm

--- a/etc/zr/mappings.ini
+++ b/etc/zr/mappings.ini
@@ -60,12 +60,12 @@ ruby-cabin
 ruby-childprocess
 ruby-clamp
 ruby-dotenv
+ruby-git
 ruby-insist
-ruby-io-like
 ruby-json-1
 ruby-pleaserun
+ruby-rchardet
 ruby-stud
-ruby-xz
 
 # epfl-scripts
 epfl-scripts-git
