etc/zr: Add ipsec-client-config package (and adapt strongswan for it)
strongswan mainly repkg'd due to conflicting /etc/ipsec.{conf,secrets}.

--- a/etc/zr/mappings.ini
+++ b/etc/zr/mappings.ini
@@ -102,6 +102,7 @@ pass
 pinentry
 rxvt-unicode
 shadow
+strongswan
 vault
 vim
 vim-runtime
@@ -110,7 +111,8 @@ xorg-xinit
 
 [adfinis]
 adfinis-?*
-openvpn-client-config-adfinis-*
+openvpn-client-config-*
+ipsec-client-config-*
 ca-certificates-adfinis
 ca-certificates-gurke
 host-gurke
