etc/environment.d: Finish/clean up

--- a/etc/environment.d/xdg.conf
+++ b/etc/environment.d/xdg.conf
@@ -18,7 +18,9 @@
 #     point.
 #  2. Create a compatibility symlink at ~/.config/environment.d or ~/.config.
 #
-# Written by ayekat on a cold Friday afternoon in April 2021. These variables were
+# Written by ayekat on a cold Friday afternoon in April 2021. These variables
+# were previously defined in ~/.pam_environment, but moved here to prepare for
+# the upcoming support drop of ~/.pam_environment in upstream PAM.
 
 
 # XDG basedir spec paths (XDG_{STATE,LIB,LOG}_HOME are non-standard!)
