Update XDG_STATE_HOME according to latest version of the XBDS
Remove all comments saying "XDG_STATE_HOME is non-standard", and change
default value to ~/.local/state in accordance with the spec.

--- a/etc/environment.d/xdg.conf
+++ b/etc/environment.d/xdg.conf
@@ -23,7 +23,7 @@
 # the upcoming support drop of ~/.pam_environment in upstream PAM.
 
 
-# XDG basedir spec paths (XDG_{STATE,LIB,LOG}_HOME are non-standard!)
+# XDG basedir spec paths (XDG_{LIB,LOG}_HOME are non-standard!)
 XDG_CACHE_HOME="$HOME/.local/var/cache"
 XDG_CONFIG_HOME="$HOME/.local/etc"
 XDG_DATA_HOME="$HOME/.local/share"
