etc/mpd: Use song ReplayGain in random mode

--- a/etc/mpd/mpd.conf
+++ b/etc/mpd/mpd.conf
@@ -7,7 +7,7 @@ state_file           "~/.local/var/lib/mpd/mpdstate"
 playlist_directory   "~/.local/var/lib/mpd/playlists"
 log_file             "~/.local/var/log/mpd.log"
 
-replaygain "album"
+replaygain "auto"
 
 samplerate_converter "internal"    # see http://mpd.wikia.com/wiki/Tuning
 audio_output {
