etc/git: Refer to a single private configuration file now
Instead of handling both private and work cases, we now use two
different private localdir repositories. Consequently, we can now refer
to the same file from here, as the specific "implementation" of that
configuration is provided by whichever repository is checked out for the
private localdir.

--- a/etc/git/config
+++ b/etc/git/config
@@ -14,6 +14,4 @@
 [merge]
 	tool = vimdiff
 [include]
-	path = ~/.local/etc/git/private/zuepfe.config
-[includeIf "gitdir:/home/martinwe/"]
-	path = ~/.local/etc/git/private/adfinis.config
+	path = ~/.local/lib/private/git/config
