Update .gitignore for XDG_DATA_HOME
First, we don't actually use weaver, so there's no point in ignoring it.

Second, we use Mumble and rdesktop for work-related stuff, so add that.

--- a/share/.gitignore
+++ b/share/.gitignore
@@ -6,10 +6,12 @@
 /krita-sysinfo.log
 /lutris/
 /mime/
+/Mumble/
+/rdesktop/
 /recently-used.xbel
 /systemd/
 /TelegramDesktop/
 /vim/
-/weaver/
+/wallpapers/
 /xorg/
 /zathura/
