share: Ignore gvfs-metadata
Also create a new "section" in the .gitignore file for Gnome-related
applications.

--- a/share/.gitignore
+++ b/share/.gitignore
@@ -1,5 +1,5 @@
+# General:
 /applications/
-/evolution/
 /gem/
 /icons/
 /krita/
@@ -16,3 +16,7 @@
 /wallpapers/
 /xorg/
 /zathura/
+
+# Gnome:
+/evolution/
+/gvfs-metadata/
