etc: Ardour is now at version 7, and I installed Gnome terminal

--- a/etc/.gitignore
+++ b/etc/.gitignore
@@ -1,5 +1,5 @@
 # General:
-/ardour6/
+/ardour7/
 /chromium/
 /darktable/
 /dconf/
@@ -34,6 +34,7 @@
 /gtk-3.0/bookmarks
 /pipewire-media-session/
 /totem/
+/xdg-terminals.list
 
 # Krita:
 /karboncalligraphyrc
