etc/lighttpd: Add file share site to chirschi
Helps distributing files to friends from my laptop.

The file serving mechanism for ayekat.ch isn't exactly great, currently.

--- a/etc/lighttpd/lighttpd-chirschi.conf
+++ b/etc/lighttpd/lighttpd-chirschi.conf
@@ -1,12 +1,18 @@
 # lighttpd configuration for chirschi
 
 include env.XDG_CONFIG_HOME + "/lighttpd/conf.d/base.conf"
-server.modules += ("mod_cgi", "mod_rewrite")
+server.modules += ("mod_cgi", "mod_rewrite", "mod_dirlisting")
 
-$HTTP["host"] !~ "^wiki(\..+)?$" { # default
+$HTTP["host"] !~ "^(wiki|files)(\..+)?$" { # default
 	simple-vhost.default-host = "ayekat.ch"
 	include env.XDG_CONFIG_HOME + "/lighttpd/sites.d/ayekat.ch.conf"
 }
+
+$HTTP["host"] =~ "^files(\..+)?$" {
+	simple-vhost.default-host = "files"
+	include env.XDG_CONFIG_HOME + "/lighttpd/sites.d/files.conf"
+}
+
 $HTTP["host"] =~ "^wiki(\..+)?$" {
 	simple-vhost.default-host = "wiki"
 	include env.XDG_CONFIG_HOME + "/lighttpd/sites.d/wiki.conf"
