--- a/etc/lighttpd/lighttpd-brombeeri.conf
+++ b/etc/lighttpd/lighttpd-brombeeri.conf
@@ -1,9 +1,15 @@
 # lighttpd configuration for brombeeri
 
 include env.XDG_CONFIG_HOME + "/lighttpd/conf.d/base.conf"
-server.modules += ("mod_cgi", "mod_rewrite")
+server.modules += ("mod_cgi", "mod_rewrite", "mod_dirlisting")
 
 $HTTP["host"] =~ "^ayekat.ch$" {
 	simple-vhost.default-host = "ayekat.ch"
 	include env.XDG_CONFIG_HOME + "/lighttpd/sites.d/ayekat.ch.conf"
+}
+
+$HTTP["host"] =~ "^files.ayekat.ch$" {
+	simple-vhost.default-host = "files"
+	include env.XDG_CONFIG_HOME + "/lighttpd/sites.d/files.conf"
+	dir-listing.activate := "disable"
 }
