fontconfig: Allow picking up the main font if available

--- a/etc/fontconfig/fonts.conf
+++ b/etc/fontconfig/fonts.conf
@@ -32,11 +32,17 @@ Written by ayekat on a rainy day in september 2012.
   <!-- font replacement -->
   <alias>
     <family>Helvetica</family>
-    <prefer><family>Free Sans</family></prefer>
+    <prefer>
+      <family>Helvetica</family>
+      <family>Free Sans</family>
+    </prefer>
   </alias>
   <alias>
     <family>Linux Libertine</family>
-    <prefer><family>Libertinus Serif</family></prefer>
+    <prefer>
+      <family>Linux Libertine</family>
+      <family>Libertinus Serif</family>
+    </prefer>
   </alias>
 </fontconfig>
 
