environment.d: Put w3m files in XDG_STATE_HOME
Wow, didn't expect to witness the day where I get to remove another
thing from my "hard resistance" list.

--- a/etc/environment.d/10-xdg.conf
+++ b/etc/environment.d/10-xdg.conf
@@ -56,6 +56,7 @@ TERMINFO="$XDG_DATA_HOME/terminfo"
 TMUX_TMPDIR="$XDG_RUNTIME_DIR"
 VAULT_CLIENT_CONFIG="$XDG_STATE_HOME/vault-client/vaultrc"
 VIMINIT="source \$XDG_CONFIG_HOME/vim/vimrc"
+W3M_DIR="$XDG_STATE_HOME/w3m"
 WINEPREFIX="$XDG_STATE_HOME/wine/default"
 XAUTHORITY="$XDG_RUNTIME_DIR/Xauthority"
 XINITRC="$XDG_CONFIG_HOME/X11/xinitrc"
