etc: Update gitignore
Add GIMP and mgba

--- a/etc/.gitignore
+++ b/etc/.gitignore
@@ -7,11 +7,13 @@
 /eog/
 /exoscale/
 /fossil.db
+/GIMP/
 /htop/
 /ibus/
 /inkscape/
 /klavaro/
 /libreoffice/
+/mgba/
 /mmtsa/
 /Mumble/
 /MuseScore/
